replace array list with segment list